Login and create user/project in website (#315) * Web features  - Signup  - New project with template support  - Add member  - Dashboard * New connection scheme. URI to cr is does not include project. The connection dialog now has two phases. First project then branch selection * New resource for "projects", ProjectsResource and IProjectsClient * Added EntityManager to Server-method. We need to ensure that we use a single entity-manager * Role support * User and admin roles supported * User model now has connections to other users * Added members, created, lastUpdated and description to Project-model * Added new test project com.dynamo.cr.common.test * Added commons-io, commons-lang and jackson to common * Added json support for REST-services with automatic conversion from and to protobuf messages (currently disabled) * Added tests for new resource (ProjectsResource) * Added tests for user resource * Added new repository resource * Serialization wrapper for protobuf messages (SerializableMessage). Wicket requires a classes to be serializable

--- a/com.dynamo.cr.web/.settings/org.eclipse.wst.common.component
+++ b/com.dynamo.cr.web/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="com.dynamo.cr.web">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/generated"/>
         <property name="context-root" value="com.dynamo.cr.web"/>
         <property name="java-output-path" value="/com.dynamo.cr.web/build/classes"/>
     </wb-module>
