--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -40,3 +40,38 @@ tr.userInfo {
 	color: #063;
 }
 
+/* Form stuff */
+div.form {
+	width: 300px;
+}
+
+div.formRow {
+	padding-bottom: 16px;
+}
+
+.formLabel {
+	color: #555;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+div.formError {
+    background-color: #ffeae8;
+    color: #b52a3b;
+    border: 1px solid #ccc;
+    padding: 6px;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+div.form input[type="text"] {
+	border: 1px solid #ccc;
+	border-bottom-color: #999;
+	padding: 4px;
+
+	margin: 0;
+	width: 290px;
+	font-size: 16px;
+	line-height: 20px;
+	color: #222;
+}
