Message documentation support and some css clean-up and formatting. ref #577

--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -50,6 +50,10 @@ body, table td, select {
 
 /* script doc */
 
+div.script_doc {
+	margin-left: 16px;
+}
+
 .script_doc p {
     margin: 0px 0px 12px 0px;
 }
