--- a/com.dynamo.cr.web2/war/asciidoc.css
+++ b/com.dynamo.cr.web2/war/asciidoc.css
@@ -10,7 +10,7 @@
 }
 
 div.asciidoc {
-    margin: 1em 1em 1em 1em;
+    margin-right: 1.5em;
     font-family: Georgia,"Times New Roman",Times,serif;
 }
 
