--- a/com.dynamo.cr.web2/war/asciidoc.css
+++ b/com.dynamo.cr.web2/war/asciidoc.css
@@ -5,13 +5,12 @@
 /* Custom */
 .asciidoc {
     font-size: 15px;
-    font-family: Georgia,"Times New Roman",Times,serif;
-
+    _font-family: Georgia,"Times New Roman",Times,serif;
 }
 
 div.asciidoc {
     margin-right: 1.5em;
-    font-family: Georgia,"Times New Roman",Times,serif;
+    /*font-family: Georgia,"Times New Roman",Times,serif;*/
 }
 
 .asciidoc p {
@@ -27,12 +26,12 @@ div.asciidoc {
 .asciidoc div#toctitle,
 .asciidoc span#author, .asciidoc span#revnumber, .asciidoc span#revdate, .asciidoc span#revremark,
 .asciidoc div#footer {
-  font-family: Arial,Helvetica,sans-serif;
+  /*font-family: Arial,Helvetica,sans-serif;*/
 }
 
 /* Serif font. */
 .asciidoc div.sectionbody {
-  font-family: Georgia,"Times New Roman",Times,serif;
+  /*font-family: Georgia,"Times New Roman",Times,serif;*/
 }
 
 /* Monospace font. */
@@ -45,11 +44,11 @@ div.asciidoc {
 }
 
 .asciidoc a {
-  color: blue;
-  text-decoration: underline;
+  /*color: blue;
+  text-decoration: underline;*/
 }
 .asciidoc a:visited {
-  color: fuchsia;
+ /* color: fuchsia;*/
 }
 
 .asciidoc em {
@@ -74,8 +73,8 @@ div.asciidoc {
   line-height: 1.3;
 }
 
-.asciidoc h1, .asciidoc h2, .asciidoc h3 {
-  border-bottom: 2px solid silver;
+.asciidoc h1, .asciidoc h2 /*, .asciidoc h3*/ {
+  border-bottom: 1px solid silver;
 }
 .asciidoc h2 {
   padding-top: 0.5em;
