Css tweaks + added clean theme

--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -431,9 +431,10 @@ div.formError {
     background-color: #ffeae8;
     color: #b52a3b;
     border: 1px solid #ccc;
-    padding: 6px;
+    padding: 6px 6px 6px 12px;
     margin-top: 5px;
-    font-weight: bold;
+    font-weight: 400;
+    border-radius: 6px 6px 6px 6px;
 }
 
 div.form input[type="text"] {
