Removed some default styles from clean.css

--- a/com.dynamo.cr.web2/war/defold/gwt/clean/clean.css
+++ b/com.dynamo.cr.web2/war/defold/gwt/clean/clean.css
@@ -29,13 +29,13 @@ body {
   direction: ltr;
 }
 a, a:visited {
-  color: #0066cc;
-  text-decoration:none;
+/*  color: #0066cc;
+  text-decoration:none;*/
 }
 
 a:hover {
-  color: #0066cc;
-  text-decoration:underline;
+  /*color: #0066cc;
+  text-decoration:underline;*/
 }
 
 select {
