--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -2,8 +2,8 @@
 /** Example rules used by the template application (remove for your app) */
 
 #topBar {
-    margin-bottom: 64px;
     width: 100%;
+    height: 110px;
 }
 
 /* named to defoldFootar in order to avoid nameclash with asciidoc */
@@ -106,6 +106,9 @@ li {
 	margin-bottom: 2px;
 }
 
+pre {
+	overflow: auto;
+}
 
 /* boxes */
 
@@ -220,6 +223,23 @@ input:hover {
     cursor: pointer;
 }
 
+.gwt-SuggestBoxPopup {
+    border: 1px solid #98999c;
+    background: #FBFCFD;
+    border-radius: 6px;
+}
+
+.gwt-SuggestBoxPopup .item-selected {
+    background: #9FDEFC;
+}
+
+.gwt-SuggestBoxPopup .item {
+    padding: 3px 8px;
+    color: black;
+    cursor: default;
+    border-radius: 4px;
+}
+
 button.delete {
     background-color: #e9eaec;
     color: #444;
@@ -284,7 +304,6 @@ div.script_doc * pre {
     border: 1px solid #B3B4B5;
     background: #FBFCFD;
     border-radius: 6px;
-    overflow: visible;
 }
 
 .script_doc p {
