Check for supported browser. case 690

--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -240,6 +240,19 @@ input:hover {
     border-radius: 4px;
 }
 
+.gwt-PopupPanelGlass {
+    background-color: black;
+    opacity: 0.3;
+    filter: alpha(opacity=30);
+}
+
+.gwt-DialogBox {
+    border: 1px solid #black;
+    border-radius: 6px;
+    background-color: #eee;
+    padding: 24px;
+}
+
 button.delete {
     background-color: #e9eaec;
     color: #444;
