Support for Yahoo OpenID. case 910 * Security bugfix. Comparison when validating existence of keys was inverted *and* the keys with "openid."-prefix was compared to keys without the "openid."-prefix * Attribute exchange namespace was hardcoded for google (ext1). The supplied namespace is now respected (ax for yahoo) * Removed attributes from OpenID#requiredKeys. Attributes in the list was with the hardcoded namespace ext1. Explicit verification is now performed for email and language.

--- a/com.dynamo.cr.web2/war/Defold.css
+++ b/com.dynamo.cr.web2/war/Defold.css
@@ -467,6 +467,20 @@ button.openIDGoogle {
     font-size: 14px;
 }
 
+button.openIDYahoo {
+    background-position: center;
+    width: 198px;
+    height: 30px;
+    font-weight: 500;
+    background:#ffffff url('/images/yahoo_openid.png') no-repeat center center;
+    color: #3C6414;
+    font-family: 'Open Sans', sans-serif;
+    border: 1px solid #888;
+    padding: 6px 16px 6px 16px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
 button.openIDGoogle:hover {
     border: 1px solid #aaa;
     cursor: pointer;
