Initial static web-site generator. case 1132
* Simple static web-site generator tool using jinja2 
  and asciidoc (desite.py)
* Servlet, StaticServlet, for serving static pages
  with a "nice" url
* Memcache support in StaticServlet. Premature optim?
* 404 page and web.xml setup for 404
* jinja2-egg added
* Minimal asciidoc styling "for" bootstrap

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/asciidoc.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/asciidoc.css
@@ -1,3 +1,7 @@
+/*
+ TODO: Remove and rename asciidoc-new.css to asciidoc.css
+ */
+
 /* This is the css from ascii-doc 8.6.3 but with class .asciidoc descended selector added in order to avoid name clashes.
    This is quick and dirty fix. Some elements are currently broken such as "NOTE:" (wrong font) in ascii-docs.
   */
