Simple static blogging system. case 1134
* The current single blog-file is
  automatically split into N "files" with 
  title, summary and date
* Single index-summary page is created for all posts
* Fall-back to index.html in StaticServlet
* Add 500-page

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -37,7 +37,7 @@ body {
             <div class="container">
                 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span>
                     <span class="icon-bar"></span> <span class="icon-bar"></span>
-                </a> <a class="brand" href="#">Defold</a>
+                </a> <a class="brand" href="/">Defold</a>
                 <div class="nav-collapse">
                     <ul class="nav">
                         {% for href, id, caption in navigation_bar %}
@@ -89,7 +89,6 @@ body {
         </div>
     </footer>
 
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="{{root}}bootstrap/js/bootstrap.js"></script>
