Initial landing page. case 1139
* Moved top-padding from base.html to css. 
* Removed top-level container in base.html and
  updated all templates
* Added some free "glyph-icons" (http://glyphicons.com)

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/asciidoc.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/asciidoc.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="container">
     <div class="asciidoc">
         {% include asciidoc %}
     </div>
+</div>
 {% endblock %}
