--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_template.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_template.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="asciidoc">
-{{ blog }}
+<div class="container">
+    <div class="asciidoc">
+    {{ blog }}
+    </div>
 </div>
 {% endblock %}
