--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/500.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/500.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %} {% block content %}
-<div class="row">
-    <div class="span12">
-        <div class="hero-unit">
-            <h1>Sorry, something went wrong</h1>
-            <p>We'll look into the problem as soon as possible.</p>
+<div class="container">
+    <div class="row">
+        <div class="span12">
+            <div class="hero-unit">
+                <h1>Sorry, something went wrong</h1>
+                <p>We'll look into the problem as soon as possible.</p>
+            </div>
         </div>
     </div>
 </div>
