--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_index.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-
-<div class="asciidoc">
-{% for post in posts %}
-    <div style="margin-bottom: 1em">
-    <h2>{{ post.title }}</h2>
-    <p><em>{{ post.date }}</em></p>
-    {{ post.summary }}
-    <p>
-    <p>
-    <a href="/blog/{{ post.id }}">Read more</a>
-    </p>
+<div class="container">
+    <div class="asciidoc">
+    {% for post in posts %}
+        <div style="margin-bottom: 1em">
+        <h2>{{ post.title }}</h2>
+        <p><em>{{ post.date }}</em></p>
+        {{ post.summary }}
+        <p>
+        <p>
+        <a href="/blog/{{ post.id }}">Read more</a>
+        </p>
+        </div>
+    {% endfor %}
     </div>
-{% endfor %}
 </div>
 {% endblock %}
